--- a/Manga_black_tont/Info.plist
+++ b/Manga_black_tont/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter-Light.ttf</string>
+	</array>
 </dict>
 </plist>
